--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-easy-emoji": "^1.8.1",
+    "react-helmet": "^6.1.0",
     "react-loading-skeleton": "^3.5.0",
     "react-lottie": "^1.2.4",
     "react-responsive-carousel": "^3.2.23",
