--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@iconify/react": "^5.0.2",
     "axios": "^1.7.7",
     "colorthief": "^2.6.0",
