--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-easy-emoji": "^1.8.1",
+    "react-headroom": "^3.2.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.5.0",
     "react-loading-skeleton": "^3.5.0",
